# SP25-690-Turakapalli

./: .gitignore  README.md  changelog.md  main.executed.ipynb  main.ipynb  pyproject.toml
models/: __init__.py  baseline_cnn.py  residual_cnn.py
training/: baseline_cifar10_noise15.pth  baseline_cifar10_noise25.pth  baseline_cifar10_noise50.pth  residual_cifar10_noise15.pth  residual_cifar10_noise25.pth  residual_cifar10_noise50.pth
